Fixed section2-home bug (it no longer overlaps section 1 while loading the js)

--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,8 @@ header i:hover {
     justify-content: center;
     height: 100%;
     position: relative;
+
+    margin-top: 1000px;
 }
 
 #title {
